# gh-tools-project-sync

./: Cargo.toml  README.md
src/: main.rs  sync_assigned_issues.rs  sync_closed_things.rs  sync_draft_prs.rs  sync_milestones.rs  sync_prs_needing_review.rs  utils.rs
src/api/: common.rs  mod.rs
src/api/mutation/: add_item_to_project.rs  assign_issue_to_project.rs  clear_issue_field_in_project.rs  clear_item_field_in_project.rs  create_issue.rs  mod.rs  remove_issue_from_project.rs  remove_item_from_project.rs  update_issue.rs  update_issue_field_in_project.rs  update_item_field_in_project.rs
src/api/query/: closed_things.rs  issues_needing_review.rs  milestones.rs  mod.rs  open_assigned_issues.rs  project_details.rs  project_items.rs  project_repo.rs  team_prs.rs
